2.2.1.5 Search and Dir classes validation methods added. Pom indent fix